<resources>
    <string name="app_name">Homeschoolr</string>
    <!-- LoginActivity -->
    <string name="welcomeMessage">Welcome to Homeschoolr</string>
    <string name="login">Login</string>
    <string name="username">Email</string>
    <string name="passwordLogin">Password</string>
    <string name="passwordVerify">Verify Password</string>
    <string name="signInSuccessful">Sign-in successful</string>
    <string name="signInFailed">Sign-in failed: </string>
    <string name="badEmailFormat">Email format incorrect</string>
    <string name="noPasswordEntered">No password entered</string>
    <string name="resetPassword">Reset password</string>
    <!-- RegisterActivity -->
    <string name="register">Register</string>
    <string name="finishRegistration">Finish registration</string>
    <string name="password">Password: </string>
    <string name="badPasswordFormat">Password must be greater than 6 characters</string>
    <string name="passwordNotMatch">Passwords do not match</string>
    <string name="familyID">Family nickname</string>
    <string name="optional">Optional</string>
    <string name="amLearner">I am a learner</string>
    <string name="amParent">I am a parent</string>
    <string name="joiningFamily">I am joining a family</string>
    <string name="emailExists">This email is already registered:\nLogging in…</string>
    <string name="familyNameExists">sorry, this family name is already taken</string>
    <string name="familyNameExpected">sorry, this family does not exist</string>
    <string name="familyNameError">Family name expecting at least 1 character</string>
    <string name="nameError">Name expecting at least 1 character</string>
    <string name="empty"> </string>
    <string name="moreInfo">More Info</string>
    <string name="userCreationSuccessful">User created successfully</string>
    <!-- SettingsActivity -->
    <string name="settings">Settings</string>
    <string name="accountSettings">Account Settings</string>
    <string name="signOut">Sign out</string>
    <string name="deleteAccount">Delete account</string>
    <string name="name">Name</string>
    <string name="change">Change</string>
    <string name="email">Email</string>
    <string name="deleteConfirmation">This will delete all data associated with the account\nthis is not recoverable.\n\nAre you sure you want to continue?</string>
    <string name="adsOffConfirmation">Developing and maintaining Homeschoolr takes a lot of time and effort. By turning the ads off, you will no longer be doing your small part in helping to keep Homeschoolr happy and updated.\nAre you sure you want to turn the ads off?</string>
    <string name="adsOnThankYou">"Thank you! :) Your contribution\ndoes not go unnoticed"</string>
    <string name="about">About</string>
    <string name="aboutText">Due to Covid-19, the internship that was lined up for my university credit was canceled. Homeschoolr was then born in 2020 as a internship replacement project. After it was finished it continued to be developed and maintained to where it is today.</string>
    <string name="donateText">If you like what I do, consider a one time donation on Paypal. Or if you really like what I do; A monthly donation on Patreon would be more than appreciated.\nIf you want to help out but don\'t want to pay money, consider leaving the ads on to help support Homeschoolr\'s future.</string>
    <string name="copywrite">© Jesse Wood</string>
    <string name="support">Support</string>
    <string name="supportText">If you need help of any kind or want to submit a bug report or suggestion; Feel free to go to Homeschoolr\'s social media page or email me personally.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="toggleAds">Toggle Ads</string>
    <string name="deleteCancel">Account deletion canceled</string>
    <string name="accountErased">Information successfully deleted from server</string>
    <string name="pleaseReSignIn">Please re-sign in to delete account</string>
    <string name="familySettings">Family Settings</string>
    <string name="invited">Invited Family Members</string>
    <string name="members">Family members with accounts</string>
    <string name="membersWithoutAccounts">Children without accounts</string>
    <string name="dummyEmail">billybob@bob.com</string>
    <string name="dummyName">Billy Bob</string>
    <string name="dummyFamilyName">The Bob\'s</string>
    <string name="parent">Parent</string>
    <string name="invite">Invite</string>
    <string name="remove">Remove</string>
    <string name="enterEmail">Enter email</string>
    <string name="inviteEmail">Invite email</string>
    <string name="add">Add</string>
    <string name="added"> added to the account</string>
    <string name="cancel">Cancel</string>
    <!--Authentication-->
    <string name="passwordResetGood">If this account exists\na password reset email has been sent</string>
    <string name="acctDelSuccessful">"Account deletion Successful"</string>
    <!--Add subject Activity-->
    <string name="addSubject">Add subject</string>
    <string name="child">Child</string>
    <string name="subject">Subject</string>
    <string name="numOfLessons">Number of lessons</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="length">Length</string>
    <string name="hours">hr</string>
    <string name="minutes">min</string>
    <string name="addSubjectButton">Go forth and make ye yonder subject</string>
    <string name="and">and</string>
    <!--Calendar Activity-->
    <string name="backArrow">&lt;-</string>
    <string name="forwardArrow">-&gt;</string>
    <string name="to">to</string>
    <string name="filterToggle">Filter</string>
    <string name="dummyWeekDay">Monday</string>
    <array name="daysOfWeek">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
        <item>Six</item>
        <item>Seven</item>
    </array>
    <string name="goToToday">Go to today</string>
    <string name="daysToShow">Days</string>
    <string name="dummyDate">5/5/55</string>
    <string name="viewSubjects">View subjects</string>
    <string name="subjects">Subjects</string>
    <!--Edit Subject Activity-->
    <string name="editSubject">Edit Subject</string>
    <string name="editSubjectButton">Go forth and edit ye yonder subject</string>
    <string name="deleteSubject">Delete Subject</string>
    <string name="deleteSubjectConfirmation">This will delete all data associated with this subject\nthis is not recoverable.\n\nAre you sure you want to continue?</string>
    <string name="deleteSubjectCancel">Subject deletion canceled</string>
    <string name="lessonsCompleted">Lessons Completed</string>
    <string name="timeStart">Start time</string>
    <string name="colon">:</string>
    <string name="seconds">Sec</string>
    <string name="timeClock">Time clock</string>
    <!--View subjects activity-->
    <string name="clockOutOf">Clocking out of</string>
    <string name="clockInTo">Clocking in to</string>
</resources>
