<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSubject">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-6579091093181482/9371296902"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/loadingSymbol2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32sp"
                    android:layout_marginBottom="32sp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/addSubject"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/child"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/childrenSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/subject"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="@string/empty"
                    android:ems="10"
                    android:gravity="center_horizontal"
                    android:hint="@string/empty"
                    android:inputType="text"
                    android:text="@string/empty" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/numOfLessons"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/numLessons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="@string/empty"
                    android:ems="10"
                    android:gravity="center_horizontal"
                    android:hint="@string/empty"
                    android:inputType="number"
                    android:text="@string/empty" />

            </TableRow>

            <CheckBox
                android:id="@+id/sundayCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sunday" />

            <CheckBox
                android:id="@+id/mondayCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/monday" />

            <CheckBox
                android:id="@+id/tuesdayCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tuesday" />

            <CheckBox
                android:id="@+id/wednesdayCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wednesday" />

            <CheckBox
                android:id="@+id/thursdayCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thursday" />

            <CheckBox
                android:id="@+id/fridayCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/friday" />

            <CheckBox
                android:id="@+id/saturdayCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saturday" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40sp"
                    android:layout_marginLeft="15sp"
                    android:layout_marginRight="15sp"
                    android:gravity="center_vertical"
                    android:text="@string/length"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/hrSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="40sp"
                    android:dropDownWidth="wrap_content" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/hours"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/and"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/minSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="40sp"
                    android:dropDownWidth="wrap_content" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/minutes"
                    android:textSize="20sp" />

            </TableRow>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addSubject"
                android:text="@string/go"
                android:textAllCaps="false" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>